# claude-usage-cf

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/claude_usage/: __init__.py  __main__.py  app.py  classifier.py  cli.py  config.py  export.py  menubar.py  models.py  pricing.py  theme.py
src/claude_usage/data/: __init__.py  aggregator.py  cache_reader.py  jsonl_parser.py  oauth_usage.py  session_reader.py
src/claude_usage/widgets/: __init__.py  _helpers.py  activity_panel.py  category_panel.py  cost_panel.py  daily_chart.py  header.py  project_chart.py  quota_panel.py  session_list.py  usage_gauge.py
tests/: test_aggregator.py  test_classifier.py  test_cli.py  test_export.py  test_jsonl_parser.py  test_menubar.py  test_pricing.py  test_widgets_category.py
